--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "nodejs-tuts-event-emmiter",
+  "name": "nodejs-tuts-web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
+    "start": "node server",
+    "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
