--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-tuts-web-server",
+  "name": "nodejs-tuts-express",
   "version": "1.0.0",
-  "description": "",
+  "description": "express example",
   "main": "server.js",
   "scripts": {
     "start": "node server",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
